Add ci for ROS (build only)

--- a/wercker.yml
+++ b/wercker.yml
@@ -117,3 +117,29 @@ build_tutorial:
       code: |
         cd build
         ./run_video_localization -v /datasets/orb_vocab/orb_vocab.dbow2 -m ./video_for_ci_1/video.mp4 -c ./video_for_ci_1/config.yaml --frame-skip 3 --no-sleep --debug --eval-log --map-db map.msg
+
+build_ros:
+  box: ghcr.io/ymd-stella/openvslam-community/openvslam-ros:latest
+  steps:
+    - script:
+      name: setup ccache
+      code: |
+        export CCACHE_DIR=${WERCKER_CACHE_DIR}/.ccache
+        ccache -M 950M
+        ccache -s
+    - script:
+      name: cmake and make
+      code: |
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Debug -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2 -DBUILD_TESTS=ON -DUSE_SSE_ORB=ON ..
+        make -j $(($(nproc) / 2))
+    - script:
+      name: build ros packages
+      code: |
+        cd ros/1
+        git clone --branch ${ROS_DISTRO} --depth 1 https://github.com/ros-perception/vision_opencv.git
+        cp -r vision_opencv/cv_bridge src/
+        rm -rf vision_opencv
+        source /opt/ros/${ROS_DISTRO}/setup.bash
+        catkin_make -j$(($(nproc) / 2)) -DBUILD_WITH_MARCH_NATIVE=ON -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2
