Update CI for ROS

--- a/wercker.yml
+++ b/wercker.yml
@@ -142,4 +142,25 @@ build_ros:
         cp -r vision_opencv/cv_bridge src/
         rm -rf vision_opencv
         source /opt/ros/${ROS_DISTRO}/setup.bash
-        catkin_make -j$(($(nproc) / 2)) -DBUILD_WITH_MARCH_NATIVE=ON -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2
+        catkin_make -j$(($(nproc) / 2)) -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2
+    - script:
+      name: run run_slam
+      code: |
+        source /opt/ros/${ROS_DISTRO}/setup.bash
+        source ros/1/devel/setup.bash
+        roscore&
+        rosrun openvslam run_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg /camera/image_raw:=/cam0/image_raw&
+        rosbag play /datasets/EuRoC/MH_04_difficult.bag
+        pkill -SIGINT -f run_slam
+        pkill -SIGINT roscore
+    - script:
+      name: run run_localization
+      code: |
+        source /opt/ros/${ROS_DISTRO}/setup.bash
+        source ros/1/devel/setup.bash
+        roscore&
+        rosrun openvslam run_localization -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg /camera/image_raw:=/cam0/image_raw&
+        sleep 5
+        rosbag play /datasets/EuRoC/MH_04_difficult.bag
+        pkill -SIGINT -f run_localization
+        pkill -SIGINT roscore
