--- a/ros/1/src/publisher/package.xml
+++ b/ros/1/src/publisher/package.xml
@@ -9,7 +9,7 @@
     <maintainer email="k.sakurada@aist.go.jp">Ken Sakurada</maintainer>
 
     <license>2-clause BSD</license>
-    <url type="website">https://openvslam.readthedocs.io/en/master/overview.html</url>
+    <url type="website">https://openvslam-community.readthedocs.io/en/master/overview.html</url>
 
     <buildtool_depend>catkin</buildtool_depend>
 
