--- a/wercker.yml
+++ b/wercker.yml
@@ -142,4 +142,67 @@ build_ros:
         cp -r vision_opencv/cv_bridge src/
         rm -rf vision_opencv
         source /opt/ros/${ROS_DISTRO}/setup.bash
-        catkin_make -j$(($(nproc) / 2)) -DBUILD_WITH_MARCH_NATIVE=ON -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2
+        catkin_make -j$(($(nproc) / 2)) -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2
+    - script:
+      name: run run_slam
+      code: |
+        source /opt/ros/${ROS_DISTRO}/setup.bash
+        source ros/1/devel/setup.bash
+        roscore&
+        rosrun openvslam run_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg /camera/image_raw:=/cam0/image_raw&
+        rosbag play /datasets/EuRoC/MH_04_difficult.bag
+        pkill -SIGINT -f run_slam
+        pkill -SIGINT roscore
+    - script:
+      name: run run_localization
+      code: |
+        source /opt/ros/${ROS_DISTRO}/setup.bash
+        source ros/1/devel/setup.bash
+        roscore&
+        rosrun openvslam run_localization -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg /camera/image_raw:=/cam0/image_raw&
+        sleep 5
+        rosbag play /datasets/EuRoC/MH_04_difficult.bag
+        pkill -SIGINT -f run_localization
+        pkill -SIGINT roscore
+
+build_ros2:
+  box: ghcr.io/ymd-stella/openvslam-community/openvslam-ros2:latest
+  steps:
+    - script:
+      name: setup ccache
+      code: |
+        export CCACHE_DIR=${WERCKER_CACHE_DIR}/.ccache
+        ccache -M 950M
+        ccache -s
+    - script:
+      name: cmake and make and install
+      code: |
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Debug -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2 -DBUILD_TESTS=ON -DUSE_SSE_ORB=ON ..
+        make -j $(($(nproc) / 2))
+        make install
+    - script:
+      name: build ros2 packages
+      code: |
+        cd ros/2
+        git clone --branch ${ROS2_DISTRO} --depth 1 https://github.com/ros-perception/vision_opencv.git
+        cp -r vision_opencv/cv_bridge src/
+        rm -rf vision_opencv
+        (source /opt/ros/${ROS2_DISTRO}/setup.bash && colcon build --parallel-workers $(($(nproc) / 2)) --cmake-args -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2)
+    - script:
+      name: run run_slam
+      code: |
+        (source /opt/ros/${ROS2_DISTRO}/setup.bash && source ros/2/install/setup.bash && ros2 run openvslam run_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg --ros-args -r /camera/image_raw:=/cam0/image_raw)&
+        (source /opt/ros/${ROS1_DISTRO}/setup.bash && source /opt/ros/${ROS2_DISTRO}/setup.bash && ros2 bag play -s rosbag_v2 /datasets/EuRoC/MH_04_difficult.bag)
+        sleep 1
+        echo "pkill -SIGINT -f run_slam"
+        pkill -SIGINT -f run_slam
+        sleep 10
+    - script:
+      name: run run_localization
+      code: |
+        (source /opt/ros/${ROS2_DISTRO}/setup.bash && source ros/2/install/setup.bash && ros2 run openvslam run_localization -v /datasets/orb_vocab/orb_vocab.dbow2 -c example/euroc/EuRoC_mono.yaml --map-db map.msg --ros-args -r /camera/image_raw:=/cam0/image_raw)&
+        sleep 5
+        (source /opt/ros/${ROS1_DISTRO}/setup.bash && source /opt/ros/${ROS2_DISTRO}/setup.bash && ros2 bag play -s rosbag_v2 /datasets/EuRoC/MH_04_difficult.bag)
+        pkill -SIGINT -f run_localization
