--- a/wercker.yml
+++ b/wercker.yml
@@ -128,12 +128,13 @@ build_ros:
         ccache -M 950M
         ccache -s
     - script:
-      name: cmake and make
+      name: cmake and make and install
       code: |
         mkdir build
         cd build
         cmake -DCMAKE_BUILD_TYPE=Debug -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=DBoW2 -DBUILD_TESTS=ON -DUSE_SSE_ORB=ON ..
         make -j $(($(nproc) / 2))
+        make install
     - script:
       name: build ros packages
       code: |
