Implement pose publisher for ROS/ROS2

--- a/ros/2/src/openvslam/package.xml
+++ b/ros/2/src/openvslam/package.xml
@@ -16,6 +16,7 @@
 
     <depend>image_transport</depend>
     <depend>cv_bridge</depend>
+    <depend>nav_msgs</depend>
 
     <export>
         <build_type>ament_cmake</build_type>
