--- a/scripts/docker/ci/Dockerfile.ros2.ci
+++ b/scripts/docker/ci/Dockerfile.ros2.ci
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM ros:foxy-ros1-bridge
 ENV DEBIAN_FRONTEND noninteractive
 
 # install dependencies via apt
@@ -16,31 +16,15 @@ RUN set -x && \
     curl \
     tar \
     unzip && \
-  : "g2o dependencies" && \
-  apt-get install -y -qq \
-    libgoogle-glog-dev \
-    libatlas-base-dev \
-    libsuitesparse-dev && \
-  : "OpenCV dependencies" && \
-  apt-get install -y -qq \
-    libgtk-3-dev \
-    libjpeg-dev \
-    libpng++-dev \
-    libtiff-dev \
-    libopenexr-dev \
-    libwebp-dev \
-    ffmpeg \
-    libavcodec-dev \
-    libavformat-dev \
-    libavutil-dev \
-    libswscale-dev \
-    libavresample-dev && \
   : "Pangolin dependencies" && \
   apt-get install -y -qq \
     libglew-dev && \
   : "other dependencies" && \
   apt-get install -y -qq \
-    libyaml-cpp-dev && \
+    libgoogle-glog-dev \
+    libyaml-cpp-dev \ 
+    libopencv-dev \
+    libeigen3-dev && \
   : "remove cache" && \
   apt-get autoremove -y -qq && \
   rm -rf /var/lib/apt/lists/*
@@ -56,90 +40,6 @@ ENV LD_LIBRARY_PATH=${CMAKE_INSTALL_PREFIX}/lib:${LD_LIBRARY_PATH}
 
 ENV NVIDIA_VISIBLE_DEVICES ${NVIDIA_VISIBLE_DEVICES:-all}
 ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics
-
-# Eigen
-ARG EIGEN3_VERSION=3.3.7
-WORKDIR /tmp
-RUN set -x && \
-  wget -q https://gitlab.com/libeigen/eigen/-/archive/${EIGEN3_VERSION}/eigen-${EIGEN3_VERSION}.tar.bz2 && \
-  tar xf eigen-${EIGEN3_VERSION}.tar.bz2 && \
-  rm -rf eigen-${EIGEN3_VERSION}.tar.bz2 && \
-  cd eigen-${EIGEN3_VERSION} && \
-  mkdir -p build && \
-  cd build && \
-  cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    .. && \
-  make -j${NUM_THREADS} && \
-  make install && \
-  cd /tmp && \
-  rm -rf *
-ENV Eigen3_DIR=${CMAKE_INSTALL_PREFIX}/share/eigen3/cmake
-
-# g2o
-ARG G2O_COMMIT=9b41a4ea5ade8e1250b9c1b279f3a9c098811b5a
-WORKDIR /tmp
-RUN set -x && \
-  git clone https://github.com/RainerKuemmerle/g2o.git && \
-  cd g2o && \
-  git checkout ${G2O_COMMIT} && \
-  mkdir -p build && \
-  cd build && \
-  cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DBUILD_SHARED_LIBS=ON \
-    -DBUILD_UNITTESTS=OFF \
-    -DBUILD_WITH_MARCH_NATIVE=OFF \
-    -DG2O_USE_CHOLMOD=OFF \
-    -DG2O_USE_CSPARSE=ON \
-    -DG2O_USE_OPENGL=OFF \
-    -DG2O_USE_OPENMP=ON \
-    -DG2O_BUILD_APPS=OFF \
-    -DG2O_BUILD_EXAMPLES=OFF \
-    -DG2O_BUILD_LINKED_APPS=OFF \
-    .. && \
-  make -j${NUM_THREADS} && \
-  make install && \
-  cd /tmp && \
-  rm -rf *
-ENV g2o_DIR=${CMAKE_INSTALL_PREFIX}/lib/cmake/g2o
-
-# OpenCV
-ARG OPENCV_VERSION=3.4.8
-WORKDIR /tmp
-RUN set -x && \
-  wget -q https://github.com/opencv/opencv/archive/${OPENCV_VERSION}.zip && \
-  unzip -q ${OPENCV_VERSION}.zip && \
-  rm -rf ${OPENCV_VERSION}.zip && \
-  cd opencv-${OPENCV_VERSION} && \
-  mkdir -p build && \
-  cd build && \
-  cmake \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} \
-    -DBUILD_DOCS=OFF \
-    -DBUILD_EXAMPLES=OFF \
-    -DBUILD_JASPER=OFF \
-    -DBUILD_OPENEXR=OFF \
-    -DBUILD_PERF_TESTS=OFF \
-    -DBUILD_TESTS=OFF \
-    -DBUILD_opencv_apps=OFF \
-    -DBUILD_opencv_dnn=OFF \
-    -DBUILD_opencv_ml=OFF \
-    -DBUILD_opencv_python_bindings_generator=OFF \
-    -DENABLE_CXX11=ON \
-    -DENABLE_FAST_MATH=ON \
-    -DWITH_EIGEN=ON \
-    -DWITH_FFMPEG=ON \
-    -DWITH_OPENMP=ON \
-    .. && \
-  make -j${NUM_THREADS} && \
-  make install && \
-  cd /tmp && \
-  rm -rf *
-ENV OpenCV_DIR=${CMAKE_INSTALL_PREFIX}/lib/cmake/opencv4
 
 # DBoW2
 ARG DBOW2_COMMIT=687fcb74dd13717c46add667e3fbfa9828a7019f
@@ -203,36 +103,32 @@ RUN set -x && \
   rm -rf *
 ENV Pangolin_DIR=${CMAKE_INSTALL_PREFIX}/lib/cmake/Pangolin
 
-# ROS
-ENV ROS1_DISTRO melodic
-ENV ROS2_DISTRO eloquent
-
+# OpenVSLAM
 RUN set -x && \
+  : "OpenVSLAM dependencies" && \
   apt-get update -y -qq && \
-  : "for ROS installation" && \
   apt-get install -y -qq \
-    lsb-release \
-    gnupg2 \
-    python3-pip && \
+    ros-${ROS_DISTRO}-libg2o && \
   : "remove cache" && \
   apt-get autoremove -y -qq && \
   rm -rf /var/lib/apt/lists/*
 
+# ROS
+ENV ROS1_DISTRO noetic
+ENV ROS2_DISTRO foxy
+
 RUN set -x && \
   sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list' && \
-  sh -c 'echo "deb http://packages.ros.org/ros2/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros2-latest.list' && \
-  apt-key adv --keyserver 'hkp://keyserver.ubuntu.com:80' --recv-key C1CF6E31E6BADE8868B172B4F42ED6FBAB17C654 && \
   apt-get update -y -qq && \
   : "install ROS1 and ROS2" && \
   apt-get install -y -qq \
-    ros-${ROS1_DISTRO}-ros-base \
-    ros-${ROS1_DISTRO}-image-transport \
-    ros-${ROS2_DISTRO}-ros-base \
     ros-${ROS2_DISTRO}-image-transport \
+    ros-${ROS2_DISTRO}-cv-bridge \
     ros-${ROS2_DISTRO}-rosbag2-bag-v2-plugins \
     ros-${ROS2_DISTRO}-ros2bag \
     ros-${ROS2_DISTRO}-rosbag2-transport \
     ros-${ROS2_DISTRO}-rosbag2-converter-default-plugins \
+    python3-pip \
     python3-colcon-common-extensions && \
   pip3 install -U \
     argcomplete && \
@@ -253,3 +149,6 @@ RUN mkdir -p /datasets/
 COPY orb_vocab /datasets/orb_vocab
 RUN mkdir -p /datasets/EuRoC
 COPY MH_04_difficult.bag /datasets/EuRoC/MH_04_difficult.bag
+
+# unset entrypoint
+ENTRYPOINT []
