--- a/scripts/docker/ci/Dockerfile.desktop.ci
+++ b/scripts/docker/ci/Dockerfile.desktop.ci
@@ -255,3 +255,14 @@ RUN mkdir -p /datasets/
 COPY orb_vocab /datasets/orb_vocab
 RUN mkdir -p /datasets/EuRoC
 COPY MH_04 /datasets/EuRoC/MH_04
+
+# evo
+RUN set -x && \
+  apt-get update -y -qq && \
+  : "install evo" && \
+  apt-get install -y -qq \
+    python3-pip && \
+  pip3 install evo --upgrade --no-binary evo && \
+  : "remove cache" && \
+  apt-get autoremove -y -qq && \
+  rm -rf /var/lib/apt/lists/*
