--- a/wercker.yml
+++ b/wercker.yml
@@ -72,15 +72,23 @@ build_without_gui:
         cd build
         ctest -V
     - script:
+      name: Convert groundtruth to TUM format (data.tum)
+      code: |
+        cd build
+        python3 ../scripts/dataset_tools/compute_euroc_cam_tf.py > tf.json
+        evo_traj euroc --transform_right tf.json /datasets/EuRoC/MH_04/state_groundtruth_estimate0/data.csv --save_as_tum
+    - script:
       name: SLAM test (monocular) with EuRoC MAV dataset
       code: |
         cd build
         ./run_euroc_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_mono.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_mono.msg
+        evo_rpe tum data.tum frame_trajectory.txt -as
     - script:
       name: SLAM test (stereo) with EuRoC MAV dataset
       code: |
         cd build
         ./run_euroc_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_stereo.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_stereo.msg
+        evo_rpe tum data.tum frame_trajectory.txt -a
 
 build_tutorial:
   steps:
