Use forked version of DBoW2

--- a/Dockerfile.ros2
+++ b/Dockerfile.ros2
@@ -50,7 +50,7 @@ ENV NVIDIA_DRIVER_CAPABILITIES ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPA
 ARG DBOW2_COMMIT=687fcb74dd13717c46add667e3fbfa9828a7019f
 WORKDIR /tmp
 RUN set -x && \
-  git clone https://github.com/shinsumicco/DBoW2.git && \
+  git clone https://github.com/OpenVSLAM-Community/DBoW2.git && \
   cd DBoW2 && \
   git checkout ${DBOW2_COMMIT} && \
   mkdir -p build && \
