Fix variable name fbow_LIBS

--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -101,7 +101,7 @@ if(BOW_FRAMEWORK MATCHES "DBoW2")
 elseif(BOW_FRAMEWORK MATCHES "FBoW")
     find_package(fbow REQUIRED)
     set(BoW_INCLUDE_DIR ${fbow_INCLUDE_DIRS})
-    set(BoW_LIBRARY ${fBoW_LIBS})
+    set(BoW_LIBRARY ${fbow_LIBS})
 else()
     message(FATAL_ERROR "Invalid BoW framework: ${BOW_FRAMEWORK}")
 endif()
