--- a/wercker.yml
+++ b/wercker.yml
@@ -90,6 +90,45 @@ build_without_gui:
         ./run_euroc_slam -v /datasets/orb_vocab/orb_vocab.dbow2 -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_stereo.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_stereo.msg
         evo_rpe tum data.tum frame_trajectory.txt -a
 
+build_without_gui_fbow:
+  steps:
+    - script:
+      name: setup ccache
+      code: |
+        export CCACHE_DIR=${WERCKER_CACHE_DIR}/.ccache
+        ccache -M 950M
+        ccache -s
+    - script:
+      name: cmake and make
+      code: |
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=Debug -DBUILD_WITH_MARCH_NATIVE=OFF -DUSE_PANGOLIN_VIEWER=OFF -DUSE_SOCKET_PUBLISHER=OFF -DUSE_STACK_TRACE_LOGGER=ON -DBOW_FRAMEWORK=FBoW -DBUILD_TESTS=ON -DUSE_SSE_ORB=ON ..
+        make -j $(($(nproc) / 2))
+    - script:
+      name: unit test
+      code: |
+        cd build
+        ctest -V
+    - script:
+      name: Convert groundtruth to TUM format (data.tum)
+      code: |
+        cd build
+        python3 ../scripts/dataset_tools/compute_euroc_cam_tf.py > tf.json
+        evo_traj euroc --transform_right tf.json /datasets/EuRoC/MH_04/state_groundtruth_estimate0/data.csv --save_as_tum
+    - script:
+      name: SLAM test (monocular) with EuRoC MAV dataset
+      code: |
+        cd build
+        ./run_euroc_slam -v /datasets/orb_vocab/orb_vocab.fbow -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_mono.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_mono.msg
+        evo_rpe tum data.tum frame_trajectory.txt -as
+    - script:
+      name: Localization test (monocular) with EuRoC MAV dataset
+      code: |
+        cd build
+        ./run_euroc_localization -v /datasets/orb_vocab/orb_vocab.fbow -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_mono.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_mono.msg
+        evo_rpe tum data.tum frame_trajectory.txt -as
+
 build_tutorial:
   steps:
     - script:
