adding stereo support for ros2

--- a/ros/2/src/openvslam/CMakeLists.txt
+++ b/ros/2/src/openvslam/CMakeLists.txt
@@ -131,6 +131,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(cv_bridge REQUIRED)
 find_package(image_transport REQUIRED)
+find_package(message_filters REQUIRED)
 find_package(nav_msgs REQUIRED)
 
 # thread library
