--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -22,3 +22,18 @@ elseif(BOW_FRAMEWORK MATCHES "FBoW")
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@OPENVSLAM_TARGETS_EXPORT_NAME@.cmake")
+
+include_directories("@CMAKE_INSTALL_PREFIX@/include")
+
+set(@PROJECT_NAME@_INCLUDE_DIRS "@CMAKE_INSTALL_PREFIX@/include")
+
+link_directories("@CMAKE_INSTALL_PREFIX@/lib")
+set(@PROJECT_NAME@_LIB_DIR "@CMAKE_INSTALL_PREFIX@/lib")
+
+set(@PROJECT_NAME@_LIBS @REQUIRED_LIBRARIES@ @PROJECT_NAME@)
+
+set(@PROJECT_NAME@_FOUND TRUE)
+set(@PROJECT_NAME@_VERSION @PROJECT_VERSION@)
+set(@PROJECT_NAME@_VERSION_MAJOR @PROJECT_VERSION_MAJOR@)
+set(@PROJECT_NAME@_VERSION_MINOR @PROJECT_VERSION_MINOR@)
+set(@PROJECT_NAME@_VERSION_PATCH @PROJECT_VERSION_PATCH@)
