--- a/ros/1/src/openvslam/CMakeLists.txt
+++ b/ros/1/src/openvslam/CMakeLists.txt
@@ -165,7 +165,7 @@ set(json_INCLUDE_DIR ${OpenVSLAM_ROOT}/3rd/json/include)
 include_directories(${json_INCLUDE_DIR})
 
 # pangolin viewer
-set(USE_PANGOLIN_VIEWER ON CACHE BOOL "Enable Pangolin Viewer")
+set(USE_PANGOLIN_VIEWER OFF CACHE BOOL "Enable Pangolin Viewer")
 if(USE_PANGOLIN_VIEWER)
     find_library(Pangolin_Viewer_LIB pangolin_viewer HINTS ${OpenVSLAM_LIB_DIR})
     find_package(Pangolin REQUIRED)
@@ -196,7 +196,7 @@ catkin_package(CATKIN_DEPENDS
 # BoW framework #
 #################
 
-set(BOW_FRAMEWORK "DBoW2" CACHE STRING "DBoW2 or FBoW")
+set(BOW_FRAMEWORK "FBoW" CACHE STRING "DBoW2 or FBoW")
 set_property(CACHE BOW_FRAMEWORK PROPERTY STRINGS "DBoW2" "FBoW")
 
 if(BOW_FRAMEWORK MATCHES "DBoW2")
