--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -91,7 +91,7 @@ else()
 endif()
 
 # Check BoW Framework
-set(BOW_FRAMEWORK "DBoW2" CACHE STRING "DBoW2 or FBoW")
+set(BOW_FRAMEWORK "FBoW" CACHE STRING "DBoW2 or FBoW")
 set_property(CACHE BOW_FRAMEWORK PROPERTY STRINGS "DBoW2" "FBoW")
 if(BOW_FRAMEWORK MATCHES "DBoW2")
     find_package(DBoW2 REQUIRED)
