--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -99,13 +99,26 @@ if(BOW_FRAMEWORK MATCHES "DBoW2")
     set(BoW_LIBRARY ${DBoW2_LIBS})
     target_compile_definitions(${PROJECT_NAME} PUBLIC USE_DBOW2)
 elseif(BOW_FRAMEWORK MATCHES "FBoW")
-    find_package(fbow REQUIRED)
-    set(BoW_INCLUDE_DIR ${fbow_INCLUDE_DIRS})
-    set(BoW_LIBRARY ${fbow_LIBS})
+    find_package(fbow QUIET)
+    if(fbow_FOUND)
+        set(BoW_INCLUDE_DIR_BUILD ${fbow_INCLUDE_DIRS})
+        set(BoW_INCLUDE_DIR_INSTALL ${fbow_INCLUDE_DIRS})
+        set(BoW_LIBRARY ${fbow_LIBS})
+    else()
+        add_subdirectory(${PROJECT_SOURCE_DIR}/3rd/FBoW ${PROJECT_BINARY_DIR}/3rd/FBoW)
+        include(${PROJECT_BINARY_DIR}/3rd/FBoW/fbowConfig.cmake)
+        set(BoW_INCLUDE_DIR_BUILD ${PROJECT_SOURCE_DIR}/3rd/FBoW/include)
+        set(BoW_INCLUDE_DIR_INSTALL 3rd/FBoW/include)
+        set(BoW_LIBRARY ${fbow_LIBS})
+        target_link_directories(${PROJECT_NAME}
+                                PUBLIC
+                                $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/3rd/FBoW/src>
+                                $<INSTALL_INTERFACE:3rd/FBoW/src>)
+    endif()
 else()
     message(FATAL_ERROR "Invalid BoW framework: ${BOW_FRAMEWORK}")
 endif()
-message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
+message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR_BUILD})")
 
 # ----- Configure OpenVSLAM library -----
 
@@ -114,11 +127,11 @@ target_include_directories(${PROJECT_NAME}
                            PUBLIC
                            $<BUILD_INTERFACE:${json_INCLUDE_DIR}>
                            $<BUILD_INTERFACE:${spdlog_INCLUDE_DIR}>
-                           $<BUILD_INTERFACE:${BoW_INCLUDE_DIR}>
+                           $<BUILD_INTERFACE:${BoW_INCLUDE_DIR_BUILD}>
                            $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/>
                            $<INSTALL_INTERFACE:include/openvslam/3rd/json/include>
                            $<INSTALL_INTERFACE:include/openvslam/3rd/spdlog/include>
-                           $<INSTALL_INTERFACE:${BoW_INCLUDE_DIR}>
+                           $<INSTALL_INTERFACE:${BoW_INCLUDE_DIR_INSTALL}>
                            $<INSTALL_INTERFACE:include/>)
 
 # Link to required libraries
