Fix build configurations for fbow

--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -95,30 +95,27 @@ set(BOW_FRAMEWORK "FBoW" CACHE STRING "DBoW2 or FBoW")
 set_property(CACHE BOW_FRAMEWORK PROPERTY STRINGS "DBoW2" "FBoW")
 if(BOW_FRAMEWORK MATCHES "DBoW2")
     find_package(DBoW2 REQUIRED)
-    set(BoW_INCLUDE_DIR ${DBoW2_INCLUDE_DIRS})
+    set(BoW_INCLUDE_DIR ${DBoW2_INCLUDE_DIRS}})
     set(BoW_LIBRARY ${DBoW2_LIBS})
     target_compile_definitions(${PROJECT_NAME} PUBLIC USE_DBOW2)
+    message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
 elseif(BOW_FRAMEWORK MATCHES "FBoW")
     find_package(fbow QUIET)
     if(fbow_FOUND)
-        set(BoW_INCLUDE_DIR_BUILD ${fbow_INCLUDE_DIRS})
-        set(BoW_INCLUDE_DIR_INSTALL ${fbow_INCLUDE_DIRS})
-        set(BoW_LIBRARY ${fbow_LIBS})
+        set(BoW_INCLUDE_DIR ${fbow_INCLUDE_DIRS}})
+        message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
     else()
         add_subdirectory(${PROJECT_SOURCE_DIR}/3rd/FBoW ${PROJECT_BINARY_DIR}/3rd/FBoW)
-        include(${PROJECT_BINARY_DIR}/3rd/FBoW/fbowConfig.cmake)
-        set(BoW_INCLUDE_DIR_BUILD ${PROJECT_SOURCE_DIR}/3rd/FBoW/include)
-        set(BoW_INCLUDE_DIR_INSTALL 3rd/FBoW/include)
-        set(BoW_LIBRARY ${fbow_LIBS})
-        target_link_directories(${PROJECT_NAME}
-                                PUBLIC
-                                $<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/3rd/FBoW/src>
-                                $<INSTALL_INTERFACE:3rd/FBoW/src>)
+        target_include_directories(${PROJECT_NAME}
+                                   PUBLIC
+                                   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rd/FBoW/include>
+                                   $<INSTALL_INTERFACE:3rd/FBoW/include>)
+        message(STATUS "BoW framework: ${BOW_FRAMEWORK} (Using submodule)")
     endif()
+    set(BoW_LIBRARY ${fbow_LIBS})
 else()
     message(FATAL_ERROR "Invalid BoW framework: ${BOW_FRAMEWORK}")
 endif()
-message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR_BUILD})")
 
 # ----- Configure OpenVSLAM library -----
 
@@ -127,11 +124,9 @@ target_include_directories(${PROJECT_NAME}
                            PUBLIC
                            $<BUILD_INTERFACE:${json_INCLUDE_DIR}>
                            $<BUILD_INTERFACE:${spdlog_INCLUDE_DIR}>
-                           $<BUILD_INTERFACE:${BoW_INCLUDE_DIR_BUILD}>
                            $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/>
                            $<INSTALL_INTERFACE:include/openvslam/3rd/json/include>
                            $<INSTALL_INTERFACE:include/openvslam/3rd/spdlog/include>
-                           $<INSTALL_INTERFACE:${BoW_INCLUDE_DIR_INSTALL}>
                            $<INSTALL_INTERFACE:include/>)
 
 # Link to required libraries
