--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rd/FBoW"]
 	path = 3rd/FBoW
-	url = git@github.com:OpenVSLAM-Community/FBoW.git
+	url = https://github.com/OpenVSLAM-Community/FBoW.git
