Fix CMakeLists.txt (link fbow)

--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -103,6 +103,7 @@ elseif(BOW_FRAMEWORK MATCHES "FBoW")
     find_package(fbow QUIET)
     if(fbow_FOUND)
         set(BoW_INCLUDE_DIR ${fbow_INCLUDE_DIRS}})
+        set(BoW_LIBRARY ${fbow_LIBS})
         message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
     else()
         add_subdirectory(${PROJECT_SOURCE_DIR}/3rd/FBoW ${PROJECT_BINARY_DIR}/3rd/FBoW)
@@ -110,9 +111,9 @@ elseif(BOW_FRAMEWORK MATCHES "FBoW")
                                    PUBLIC
                                    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rd/FBoW/include>
                                    $<INSTALL_INTERFACE:3rd/FBoW/include>)
+        set(BoW_LIBRARY fbow)
         message(STATUS "BoW framework: ${BOW_FRAMEWORK} (Using submodule)")
     endif()
-    set(BoW_LIBRARY ${fbow_LIBS})
 else()
     message(FATAL_ERROR "Invalid BoW framework: ${BOW_FRAMEWORK}")
 endif()
