--- a/src/openvslam/CMakeLists.txt
+++ b/src/openvslam/CMakeLists.txt
@@ -40,6 +40,20 @@ else()
     endif()
 endif()
 
+# Check BoW Framework
+set(BOW_FRAMEWORK "FBoW" CACHE STRING "DBoW2 or FBoW")
+set_property(CACHE BOW_FRAMEWORK PROPERTY STRINGS "DBoW2" "FBoW")
+if(BOW_FRAMEWORK MATCHES "DBoW2")
+    find_package(DBoW2 REQUIRED)
+elseif(BOW_FRAMEWORK MATCHES "FBoW")
+    find_package(fbow QUIET)
+    if(NOT fbow_FOUND)
+        add_subdirectory(${PROJECT_SOURCE_DIR}/3rd/FBoW ${PROJECT_BINARY_DIR}/3rd/FBoW)
+    endif()
+else()
+    message(FATAL_ERROR "Invalid BoW framework: ${BOW_FRAMEWORK}")
+endif()
+
 # ----- Create OpenVSLAM library -----
 
 add_library(${PROJECT_NAME}
@@ -90,27 +104,21 @@ else()
     message(STATUS "SSE for floating-point operation: DISABLED")
 endif()
 
-# Check BoW Framework
-set(BOW_FRAMEWORK "FBoW" CACHE STRING "DBoW2 or FBoW")
-set_property(CACHE BOW_FRAMEWORK PROPERTY STRINGS "DBoW2" "FBoW")
 if(BOW_FRAMEWORK MATCHES "DBoW2")
-    find_package(DBoW2 REQUIRED)
     set(BoW_INCLUDE_DIR ${DBoW2_INCLUDE_DIRS}})
     set(BoW_LIBRARY ${DBoW2_LIBS})
     target_compile_definitions(${PROJECT_NAME} PUBLIC USE_DBOW2)
     message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
 elseif(BOW_FRAMEWORK MATCHES "FBoW")
-    find_package(fbow QUIET)
     if(fbow_FOUND)
         set(BoW_INCLUDE_DIR ${fbow_INCLUDE_DIRS}})
         set(BoW_LIBRARY ${fbow_LIBS})
         message(STATUS "BoW framework: ${BOW_FRAMEWORK} (found in ${BoW_INCLUDE_DIR})")
     else()
-        add_subdirectory(${PROJECT_SOURCE_DIR}/3rd/FBoW ${PROJECT_BINARY_DIR}/3rd/FBoW)
         target_include_directories(${PROJECT_NAME}
-                                   PUBLIC
-                                   $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rd/FBoW/include>
-                                   $<INSTALL_INTERFACE:include/fbow>)
+                                PUBLIC
+                                $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/3rd/FBoW/include>
+                                $<INSTALL_INTERFACE:include/fbow>)
         set(BoW_LIBRARY fbow)
         message(STATUS "BoW framework: ${BOW_FRAMEWORK} (Using submodule)")
     endif()
