--- a/wercker.yml
+++ b/wercker.yml
@@ -129,6 +129,22 @@ build_without_gui_fbow:
         ./run_euroc_localization -v /datasets/orb_vocab/orb_vocab.fbow -d /datasets/EuRoC/MH_04 -c ../example/euroc/EuRoC_mono.yaml --frame-skip 2 --no-sleep --debug --eval-log --map-db euroc_mono.msg
         evo_rpe tum data.tum frame_trajectory.txt -as
 
+build_type_none:
+  steps:
+    - script:
+      name: setup ccache
+      code: |
+        export CCACHE_DIR=${WERCKER_CACHE_DIR}/.ccache
+        ccache -M 950M
+        ccache -s
+    - script:
+      name: cmake and make
+      code: |
+        mkdir build
+        cd build
+        cmake -DCMAKE_BUILD_TYPE=None ..
+        make -j $(($(nproc) / 2))
+
 build_tutorial:
   steps:
     - script:
