--- a/example/kitti/KITTI_stereo_00-02.yaml
+++ b/example/kitti/KITTI_stereo_00-02.yaml
@@ -31,6 +31,7 @@ Camera.color_order: "Gray"
 #================#
 
 Feature.max_num_keypoints: 2000
+Feature.ini_max_num_keypoints: 4000
 Feature.scale_factor: 1.2
 Feature.num_levels: 8
 Feature.ini_fast_threshold: 12
