--- a/example/tum_vi/TUM_VI_stereo.yaml
+++ b/example/tum_vi/TUM_VI_stereo.yaml
@@ -57,6 +57,7 @@ StereoRectifier.R_right: [0.9997411981023351, 0.01955199401713946, 0.01162997621
 #================#
 
 Feature.max_num_keypoints: 1000
+Feature.ini_max_num_keypoints: 2000
 Feature.scale_factor: 1.2
 Feature.num_levels: 8
 Feature.ini_fast_threshold: 20
