--- a/example/tum_vi/TUM_VI_mono.yaml
+++ b/example/tum_vi/TUM_VI_mono.yaml
@@ -6,39 +6,42 @@
 # Camera Model #
 #==============#
 
-Camera.name: "TUM VI monocular"
-Camera.setup: "monocular"
-Camera.model: "fisheye"
+Camera:
+  name: "TUM VI monocular"
+  setup: "monocular"
+  model: "fisheye"
 
-Camera.fx: 190.97847715128717
-Camera.fy: 190.9733070521226
-Camera.cx: 254.93170605935475
-Camera.cy: 256.8974428996504
+  fx: 190.97847715128717
+  fy: 190.9733070521226
+  cx: 254.93170605935475
+  cy: 256.8974428996504
 
-Camera.k1: 0.0034823894022493434
-Camera.k2: 0.0007150348452162257
-Camera.k3: -0.0020532361418706202
-Camera.k4: 0.00020293673591811182
+  k1: 0.0034823894022493434
+  k2: 0.0007150348452162257
+  k3: -0.0020532361418706202
+  k4: 0.00020293673591811182
 
-Camera.fps: 20
-Camera.cols: 512
-Camera.rows: 512
+  fps: 20
+  cols: 512
+  rows: 512
 
-Camera.color_order: "Gray"
+  color_order: "Gray"
 
 #================#
 # ORB Parameters #
 #================#
 
-Feature.max_num_keypoints: 1000
-Feature.ini_max_num_keypoints: 2000
-Feature.scale_factor: 1.2
-Feature.num_levels: 8
-Feature.ini_fast_threshold: 20
-Feature.min_fast_threshold: 7
+Feature:
+  max_num_keypoints: 1000
+  ini_max_num_keypoints: 2000
+  scale_factor: 1.2
+  num_levels: 8
+  ini_fast_threshold: 20
+  min_fast_threshold: 7
 
 #========================#
 # Initializer Parameters #
 #========================#
 
-Initializer.scaling_factor: 2.0
+Initializer:
+  scaling_factor: 2.0
