--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -5,36 +5,36 @@
 #==============#
 
 # intrinsic parameters after stereo-rectification are written
-
-Camera.name: "EuRoC stereo"
-Camera.setup: "stereo"
-Camera.model: "perspective"
+Camera:
+  name: "EuRoC stereo"
+  setup: "stereo"
+  model: "perspective"
 
 # new "rectified" matrices is the first three cols of the projection matrix which is calculated with cv::stereoRectify()
 # e.g. fx = P1[0][0] or P2[0][0], cx = P1[0][2] or P2[0][2]
 #      fy = P1[1][1] or P2[1][1], cy = P1[1][2] or P2[1][2]
 
-Camera.fx: 435.2046959714599
-Camera.fy: 435.2046959714599
-Camera.cx: 367.4517211914062
-Camera.cy: 252.2008514404297
+  fx: 435.2046959714599
+  fy: 435.2046959714599
+  cx: 367.4517211914062
+  cy: 252.2008514404297
 
 # there is no distortion after stereo rectification
 
-Camera.k1: 0.0
-Camera.k2: 0.0
-Camera.p1: 0.0
-Camera.p2: 0.0
-Camera.k3: 0.0
+  k1: 0.0
+  k2: 0.0
+  p1: 0.0
+  p2: 0.0
+  k3: 0.0
 
 # focal_x_baseline is -P2[0][3] which is calculated with cv::stereoRectify()
 
-Camera.fps: 20.0
-Camera.cols: 752
-Camera.rows: 480
-Camera.focal_x_baseline: 47.90639384423901
+  fps: 20.0
+  cols: 752
+  rows: 480
+  focal_x_baseline: 47.90639384423901
 
-Camera.color_order: "Gray"
+  color_order: "Gray"
 
 #======================#
 # Stereo Rectification #
@@ -43,41 +43,45 @@ Camera.color_order: "Gray"
 # original intrinsic parameters (K, D) and stereo-recitification parameters (R)
 # matrices (K, R) are written in row-major order
 
-StereoRectifier.K_left: [458.654, 0.0, 367.215, 0.0, 457.296, 248.375, 0.0, 0.0, 1.0]
-StereoRectifier.D_left: [-0.28340811, 0.07395907, 0.00019359, 1.76187114e-05, 0.0]
-StereoRectifier.R_left: [0.999966347530033, -0.001422739138722922, 0.008079580483432283, 0.001365741834644127, 0.9999741760894847, 0.007055629199258132, -0.008089410156878961, -0.007044357138835809, 0.9999424675829176]
-StereoRectifier.K_right: [457.587, 0.0, 379.999, 0.0, 456.134, 255.238, 0.0, 0.0, 1]
-StereoRectifier.D_right: [-0.28368365, 0.07451284, -0.00010473, -3.555907e-05, 0.0]
-StereoRectifier.R_right: [0.9999633526194376, -0.003625811871560086, 0.007755443660172947, 0.003680398547259526, 0.9999684752771629, -0.007035845251224894, -0.007729688520722713, 0.007064130529506649, 0.999945173484644]
+StereoRectifier:
+  K_left: [458.654, 0.0, 367.215, 0.0, 457.296, 248.375, 0.0, 0.0, 1.0]
+  D_left: [-0.28340811, 0.07395907, 0.00019359, 1.76187114e-05, 0.0]
+  R_left: [0.999966347530033, -0.001422739138722922, 0.008079580483432283, 0.001365741834644127, 0.9999741760894847, 0.007055629199258132, -0.008089410156878961, -0.007044357138835809, 0.9999424675829176]
+  K_right: [457.587, 0.0, 379.999, 0.0, 456.134, 255.238, 0.0, 0.0, 1]
+  D_right: [-0.28368365, 0.07451284, -0.00010473, -3.555907e-05, 0.0]
+  R_right: [0.9999633526194376, -0.003625811871560086, 0.007755443660172947, 0.003680398547259526, 0.9999684752771629, -0.007035845251224894, -0.007729688520722713, 0.007064130529506649, 0.999945173484644]
 
 #================#
 # ORB Parameters #
 #================#
 
-Feature.max_num_keypoints: 1000
-Feature.ini_max_num_keypoints: 2000
-Feature.scale_factor: 1.2
-Feature.num_levels: 8
-Feature.ini_fast_threshold: 20
-Feature.min_fast_threshold: 7
+Feature:
+  max_num_keypoints: 1000
+  ini_max_num_keypoints: 2000
+  scale_factor: 1.2
+  num_levels: 8
+  ini_fast_threshold: 20
+  min_fast_threshold: 7
 
 #========================#
 # Initializer Parameters #
 #========================#
 
-Initializer.num_min_triangulated_pts: 100
+Initializer:
+  num_min_triangulated_pts: 100
 
 #===========================#
 # PangolinViewer Parameters #
 #===========================#
 
-PangolinViewer.keyframe_size: 0.07
-PangolinViewer.keyframe_line_width: 1
-PangolinViewer.graph_line_width: 1
-PangolinViewer.point_size: 2
-PangolinViewer.camera_size: 0.08
-PangolinViewer.camera_line_width: 3
-PangolinViewer.viewpoint_x: 0
-PangolinViewer.viewpoint_y: -0.65
-PangolinViewer.viewpoint_z: -1.9
-PangolinViewer.viewpoint_f: 400
+PangolinViewer:
+  keyframe_size: 0.07
+  keyframe_line_width: 1
+  graph_line_width: 1
+  point_size: 2
+  camera_size: 0.08
+  camera_line_width: 3
+  viewpoint_x: 0
+  viewpoint_y: -0.65
+  viewpoint_z: -1.9
+  viewpoint_f: 400
