--- a/example/tum_rgbd/TUM_RGBD_mono_2.yaml
+++ b/example/tum_rgbd/TUM_RGBD_mono_2.yaml
@@ -4,49 +4,52 @@
 # Camera Model #
 #==============#
 
-Camera.name: "TUM RGBD monocular 02"
-Camera.setup: "monocular"
-Camera.model: "perspective"
+Camera:
+  name: "TUM RGBD monocular 02"
+  setup: "monocular"
+  model: "perspective"
 
-Camera.fx: 520.908620
-Camera.fy: 521.007327
-Camera.cx: 325.141442
-Camera.cy: 249.701764
+  fx: 520.908620
+  fy: 521.007327
+  cx: 325.141442
+  cy: 249.701764
 
-Camera.k1: 0.231222
-Camera.k2: -0.784899
-Camera.p1: -0.003257
-Camera.p2: -0.000105
-Camera.k3: 0.917205
+  k1: 0.231222
+  k2: -0.784899
+  p1: -0.003257
+  p2: -0.000105
+  k3: 0.917205
 
-Camera.fps: 30.0
-Camera.cols: 640
-Camera.rows: 480
+  fps: 30.0
+  cols: 640
+  rows: 480
 
-Camera.color_order: "RGB"
+  color_order: "RGB"
 
 #================#
 # ORB Parameters #
 #================#
 
-Feature.max_num_keypoints: 1000
-Feature.ini_max_num_keypoints: 2000
-Feature.scale_factor: 1.2
-Feature.num_levels: 8
-Feature.ini_fast_threshold: 20
-Feature.min_fast_threshold: 7
+Feature:
+  max_num_keypoints: 1000
+  ini_max_num_keypoints: 2000
+  scale_factor: 1.2
+  num_levels: 8
+  ini_fast_threshold: 20
+  min_fast_threshold: 7
 
 #===========================#
 # PangolinViewer Parameters #
 #===========================#
 
-PangolinViewer.keyframe_size: 0.05
-PangolinViewer.keyframe_line_width: 1
-PangolinViewer.graph_line_width: 1
-PangolinViewer.point_size: 2
-PangolinViewer.camera_size: 0.08
-PangolinViewer.camera_line_width: 3
-PangolinViewer.viewpoint_x: 0
-PangolinViewer.viewpoint_y: -0.9
-PangolinViewer.viewpoint_z: -1.9
-PangolinViewer.viewpoint_f: 400
+PangolinViewer:
+  keyframe_size: 0.05
+  keyframe_line_width: 1
+  graph_line_width: 1
+  point_size: 2
+  camera_size: 0.08
+  camera_line_width: 3
+  viewpoint_x: 0
+  viewpoint_y: -0.9
+  viewpoint_z: -1.9
+  viewpoint_f: 400
