Add mapping parameters

--- a/example/aist/equirectangular.yaml
+++ b/example/aist/equirectangular.yaml
@@ -30,3 +30,10 @@ Feature:
     - [0.0, 1.0, 0.84, 1.0]
     - [0.0, 0.2, 0.7, 1.0]
     - [0.8, 1.0, 0.7, 1.0]
+
+#====================#
+# Mapping Parameters #
+#====================#
+
+Mapping:
+  baseline_dist_thr_ratio: 0.02
