--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -69,6 +69,13 @@ Feature:
 
 depth_threshold: 40
 
+#====================#
+# Mapping Parameters #
+#====================#
+
+Mapping:
+  baseline_dist_thr: 0.11007784219
+
 #========================#
 # Initializer Parameters #
 #========================#
