--- a/example/tum_vi/TUM_VI_mono.yaml
+++ b/example/tum_vi/TUM_VI_mono.yaml
@@ -39,6 +39,13 @@ Feature:
   ini_fast_threshold: 20
   min_fast_threshold: 7
 
+#====================#
+# Mapping Parameters #
+#====================#
+
+Mapping:
+  baseline_dist_thr_ratio: 0.02
+
 #========================#
 # Initializer Parameters #
 #========================#
